# mocap_px4_relay

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: optitrack2_px4_relay.yaml  optitrack2_px4_relay_params.yaml
launch/: mav_asif_test1_launch.py  optitrack2_px4_relay_launch.py  vicon_px4_relay_launch.py
src/: full_state_relay.cpp  optitrack2_px4_relay.cpp  optitrack_to_px4_relay.cpp  vicon_px4_relay.cpp
